# cc02_autodrive

./: CLAUDE.md  package.xml  setup.cfg  setup.py
cc02_autodrive/: gnss_logger.py  mouse_trigger_node.py  pid_controller.py  pid_controller_v2.py  plot_log_map.py  pure_pursuit_controller.py  pure_pursuit_controller.py.bak_before_ramp_20260703  pure_pursuit_controller.py.bak_stable_20260702_195523  pure_pursuit_controller_backup_20260630.py  pure_pursuit_controller_backup_20260701.py  pure_pursuit_controller_backup_20260704.py  pure_pursuit_controller_backup_20260704b.py  pure_pursuit_controller_backup_20260704c.py  pure_pursuit_controller_backup_20260704d.py  pure_pursuit_controller_backup_20260705.py  pure_pursuit_controller_backup_20260707.py  stanley_controller.py  waypoints_example.csv  wp_position.csv  wp_position_advance.csv  wp_position_basic.csv  wp_position_with_midpoints.csv  wp_position_wp0_wp1.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cc02_autodrive/lib/cc02_autodrive/: mouse_trigger_node  pid_node  pid_node_v2
install/cc02_autodrive/share/cc02_autodrive/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cc02_autodrive/share/cc02_autodrive/launch/: autodrive_bringup.launch.py
launch/: autodrive_bringup.launch.py  control_bringup.launch.py  control_bringup.launch.py.bak_stable_20260702_195523  gnss_bringup.launch.py
log/: latest_build
matlab/: calibrate_google_earth.m  plot_corner_tuning.m  plot_log_map.m  plot_speed_distance.m
