<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cc02_autodrive</name>
  <version>0.0.0</version>
  <description>研究活動:PID制御による自律走行</description>
  <maintainer email="longtaichuanben@gmail.com">ryutakawamoto</maintainer>
  <license>BSD-3-Clause</license>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
