<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cc02_autodrive</name>
  <version>0.0.0</version>
  <description>研究活動:PID制御による自律走行</description>
  <maintainer email="longtaichuanben@gmail.com">ryutakawamoto</maintainer>
  <license>BSD-3-Clause</license>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gnss_ros_standardization</depend>
  <depend>python3-evdev</depend>
  <depend>python3-pymap3d</depend>
  <exec_depend>rc_car_driver</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
